tests/cases/compiler-development/artifact/errors/diagnostic-lexer-unicode-escape-eof.ari
fn main() -> i64 {
  let text = "\u{12
  return 0;
}
